# ur3e_irl_project

./: CMakeLists.txt  README.md  package.xml
build_isolated/: catkin_make_isolated.cache
config/: README.md  conveyor_config.yaml  ur3e_calibration.yaml  ur3e_combined.srdf
devel_isolated/: _setup_util.py  setup.sh
launch/: conveyor_control.launch  conveyor_gazebo.launch  robot.launch  robot_gazebo.launch  robot_gazebo_params.launch  robot_gazebo_test.launch  sample_spawner.launch  simple_pnp_gazebo.launch  simple_pnp_real.launch  spawn_move_claim_onion.launch  test_launch.launch  upload_gripper.launch  ur3e_load.launch  ur3e_load.launch.xml
meshes/: belt2.stl  conveyor_assembly_01.stl  conveyor_box.stl  custom_onion.dae  custom_onion.stl  custom_onion_bad.dae  custom_onion_bad_real_blemish.dae  custom_onion_defect.stl  frame.stl  l5.DAE  onion_bin.stl  onion_bin_collision.stl  onion_crate.STL  sawyer_lab.stl
msg/: OBlobs.msg  StringArray.msg  onions_blocks_poses.msg
onrobot_sg/: CMakeLists.txt  package.xml
scripts/: PickandPlace.py  expert_policy.csv  get_camera_detections.py  gripper_to_position.py  pnp_gazebo_vision.py  pnp_physical_vision.py  policy_executor_gazebo.py  policy_executor_physical.py  policy_executor_physical0.py  policy_executor_physical01.py  policy_executor_physical10.py  policy_executor_physical15.py  policy_executor_physical2.py  policy_utils_gazebo.py  simple_pnp.py  simple_pnp1.py  simple_pnp_gazebo.py  simple_pnp_gazebo0.py  temp_test_script.py  temp_test_script1.py  test.py
sdf/: onion.sdf  onion_bad.sdf  tesst_onion.sdf
src/: onion_blocks_poses_publisher.cpp  onion_blocks_spawner.cpp  planning_scene_ur3e.cpp
srv/: claim_track.srv
urdf/: bad_onion.urdf  conveyor.urdf.xacro  conveyor_g_path.urdf.xacro  conveyor_g_path_old.urdf.xacro  good_onion.urdf  gripper.urdf.xacro  onion_bin.urdf.xacro  ur3e_combined.urdf.xacro  ur3e_combined_collision.urdf.xacro  ur3e_combined_gazebo.urdf.xacro  ur3e_lab.urdf.xacro
worlds/: test.world  ur3e.world  ur3e_lab.world
(+16 files in other folders)
